<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
	<Button
	    android:id="@+id/main_nav_fleet"
	    style="?android:attr/buttonBarButtonStyle"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:text="@string/main_nav_fleet" />
	
	<Button
	    android:id="@+id/main_nav_ship"
	    style="?android:attr/buttonBarButtonStyle"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:text="@string/main_nav_ship" />
	
	<Button
	    android:id="@+id/main_nav_news"
	    style="?android:attr/buttonBarButtonStyle"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:text="@string/main_nav_news" />
	
	<Button
	    android:id="@+id/main_nav_combat"
	    style="?android:attr/buttonBarButtonStyle"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:text="@string/main_nav_combat" />

</LinearLayout>
